tests/src/frontend/syntax/invalid/string_escape_surrogate.sk
fun main(): String {
  "\udc00"
}
